<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_Control" Id="{6d2a29ed-0dfc-4be1-ad02-3e5984113bf6}">
    <Declaration><![CDATA[VAR_GLOBAL
	{attribute 'pytmc' :=' pv: EM1L0:GEM:CNTRL:SP '}
	fGEM1SetpointValue : REAL:=0.001;
	{attribute 'pytmc' :=' pv: EM2L0:GEM:CNTRL:SP '}
	fGEM2SetpointValue : REAL:=0.001;
	
	
	{attribute 'pytmc' :=' pv: EM1L0:GEM:CNTRL:GO '}
	GEM1_GO : BOOL:=false;
	
	{attribute 'pytmc' :=' pv: EM2L0:GEM:CNTRL:GO '}
	GEM2_GO : BOOL:=false;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>